--- a/views/pages/weather.ejs
+++ b/views/pages/weather.ejs
@@ -1,122 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="stylesheet"
-			href="./styles/css/weather.css"
-		/>
 
-		<title>Weather</title>
-	</head>
-	<body>
-		<nav>
-			<div class="nav-center">
-				<h1>ACTIVE API</h1>
-				<div>
-					<a href="index.html">Instructions</a>
-					<a href="country.html">Country</a>
-					<a href="weather.html">Weather</a>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="./styles/css/weather.css" />
+
+	<title>Weather</title>
+</head>
+
+<body>
+	<nav>
+		<div class="nav-center">
+			<h1>ACTIVE API</h1>
+			<div>
+				<a href="index.html">Instructions</a>
+				<a href="country.html">Country</a>
+				<a href="weather.html">Weather</a>
+			</div>
+		</div>
+	</nav>
+	<form action="/weather" method="GET">
+		<div id="inputs">
+			<input type="text" name="cityInput" id="cityInput" placeholder="City Name" />
+			<span><button type="submit" id="submitButton">
+					SUBMIT
+				</button></span>
+		</div>
+
+		<div id="weatherContainer">
+			<div id="weatherInfo">
+				<div id="one">
+					<div class="top">
+					<div id="climateImage">
+						<img class="imageIcon" src="https://cdn.weatherapi.com/weather/64x64/day/176.png" />
+					</div>
+					<div id="temperature" class="temp">
+						100 F
+					</div>
+					</div>
+					<div id="climate">
+						<%=weather.current.condition.text%>
+					</div>
 				</div>
-			</div>
-		</nav>
-		<form
-			action="/weather"
-			method="GET"
-		>
-			<div id="inputs">
-				<input
-					type="text"
-					name="cityInput"
-					id="cityInput"
-					placeholder="City Name"
-				/>
-				<span
-					><button
-						type="submit"
-						id="submitButton"
-					>
-						SUBMIT
-					</button></span
-				>
-			</div>
 
-			<div id="weatherContainer">
-				<div id="weatherInfo">
-					<div id="one">
-						<div id="climateImage">
-							<img
-								class="imageIcon"
-								src="https://cdn.weatherapi.com/weather/64x64/day/176.png"
-							/>
-						</div>
-						<div
-							id="temperature"
-							class="temp"
-						>
-							100 F
-						</div>
+				<div id="two">
+					<div id="query"><span class="regular">Results for:</span>
+						<%=weather.location.name%>, <%=weather.location.region%>
 					</div>
-
-					<div id="two">
-						<div id="query"><span class="regular">Results for:</span> <%=weather.location.name%>, <%=weather.location.region%></div>
-						<div id="date"><%=weather.location.localtime%></div>
-						<div id="climate"><%=weather.current.condition.text%></div>
+					<div id="date">
+						<%=weather.location.localtime%>
 					</div>
-
-					<div id="three">
-						<div
-							id="humidity"
-							class="col"
-						>
-							<div class="desc">Humidity</div>
-							<%=weather.current.humidity%>%
-						</div>
-						<div
-							id="wind"
-							class="col"
-						>
-							<div class="desc">Wind</div>
-							<%=weather.current.wind_mph%>mph
-						</div>
-						<div
-							id="rain"
-							class="col"
-						>
-							<div class="desc">Rain</div>
-							<%=weather.forecast.forecastday[0].day.daily_chance_of_rain%>%
-						</div>
+					<div id="moon">
+						<%=weather.forecast.forecastday[0].astro.moon_phase%>
 					</div>
+				</div>
 
-					<div id="four">
-						<div
-							id="hi"
-							class="col"
-						>
-							<div class="desc">HI</div>
-							<%=weather.forecast.forecastday[0].day.maxtemp_f%>F
-						</div>
-						<div
-							id="low"
-							class="col"
-						>
-							<div class="desc">LOW</div>
-							<%=weather.forecast.forecastday[0].day.mintemp_f%>F
-						</div>
-						<div
-							id="uv"
-							class="col"
-						>
-							<div class="desc">UV</div>
-							<%=weather.forecast.forecastday[0].day.uv%>
-						</div>
+				<div id="three">
+					<div id="humidity" class="col">
+						<div class="desc">Humidity</div>
+						<%=weather.current.humidity%>%
+					</div>
+					<div id="wind" class="col">
+						<div class="desc">Wind</div>
+						<%=weather.current.wind_mph%>mph
+					</div>
+					<div id="rain" class="col">
+						<div class="desc">Rain</div>
+						<%=weather.forecast.forecastday[0].day.daily_chance_of_rain%>%
+					</div>
+				</div>
+
+				<div id="four">
+					<div id="hi" class="col">
+						<div class="desc">HI</div>
+						<%=weather.forecast.forecastday[0].day.maxtemp_f%>F
+					</div>
+					<div id="low" class="col">
+						<div class="desc">LOW</div>
+						<%=weather.forecast.forecastday[0].day.mintemp_f%>F
+					</div>
+					<div id="uv" class="col">
+						<div class="desc">UV</div>
+						<%=weather.forecast.forecastday[0].day.uv%>
 					</div>
 				</div>
 			</div>
-		</form>
-	</body>
+		</div>
+	</form>
+</body>
+
 </html>
