--- a/public/styles/css/country.css
+++ b/public/styles/css/country.css
@@ -1,92 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap");
-nav {
-  font-family: "Open Sans", sans-serif;
-  height: 4rem;
-  background-color: #3C434E;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-}
-
-.nav-center {
-  display: flex;
-  width: 90vw;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.nav-center,
-.nav-center a {
-  color: white;
-  font-size: 1.953rem;
-}
-
-.nav-center h1 {
-  margin-bottom: 0;
-  font-weight: 700;
-}
-
-.nav-center a + a {
-  margin-left: 1rem;
-}
-
-.nav-center {
-  text-transform: capitalize;
-}
-
-ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-body {
-  font-weight: 400;
-  line-height: 1.75;
-}
-
-p {
-  margin-bottom: 1rem;
-  max-width: 40em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  margin: 0;
-  margin-bottom: 0.75rem;
-  font-weight: 400;
-  line-height: 1.3;
-  text-transform: capitalize;
-  text-align: center;
-}
-
-h1 {
-  font-size: 3.052rem;
-}
-
-h2 {
-  font-size: 2.441rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins:wght@700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -413,6 +327,198 @@ template {
   display: none;
 }
 
+nav {
+  font-family: "Open Sans", sans-serif;
+  height: 4rem;
+  background-color: #3C434E;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.nav-center {
+  display: flex;
+  width: 90vw;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-center,
+.nav-center a {
+  color: white;
+  font-size: 1.953rem;
+}
+
+.nav-center h1 {
+  margin-bottom: 0;
+  font-weight: 700;
+}
+
+.nav-center a + a {
+  margin-left: 1rem;
+}
+
+.nav-center {
+  text-transform: capitalize;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-weight: 400;
+  line-height: 1.75;
+}
+
+p {
+  margin-bottom: 1rem;
+  max-width: 40em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  margin-bottom: 0.75rem;
+  font-weight: 400;
+  line-height: 1.3;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
 body {
   background-color: #E6E6E6;
+}
+
+.desc {
+  color: #515151;
+  margin: 0;
+}
+
+#countryContainer {
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
+  margin: auto;
+  margin-top: 5vh;
+  height: 70vh;
+  width: 90vw;
+  background-color: #6880A7;
+}
+
+#countryInfo {
+  font-size: 5vh;
+  -moz-column-gap: 10%;
+       column-gap: 10%;
+  padding: 5vh;
+  height: 90%;
+  display: grid;
+  text-align: center;
+  grid-template-areas: "one two" "three four";
+}
+
+#one {
+  font-weight: 800;
+}
+
+.top {
+  grid-area: one;
+  display: flex;
+}
+
+#two {
+  position: right;
+  font-weight: 800;
+  grid-area: two;
+}
+
+#three {
+  font-weight: 800;
+  grid-area: three;
+}
+
+#four {
+  font-weight: 800;
+  grid-area: four;
+  text-align: center;
+}
+
+.col {
+  flex: 1;
+  /* Each column takes an equal amount of space */
+  padding: 20px;
+}
+
+.regular {
+  color: black;
+  font-weight: 400;
+}
+
+.temp {
+  font-size: 10vh;
+}
+
+.imageIcon {
+  height: 17.5vh;
+  width: 10vw;
+}
+
+form {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* Reset the styles for form inputs and buttons */
+input,
+button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  padding: 1.5vh;
+}
+
+#inputs {
+  margin: 5vh 0 0 5vh;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+#submitButton {
+  background-color: #3C434E;
+  color: white;
 }/*# sourceMappingURL=country.css.map */
