--- a/views/pages/country.ejs
+++ b/views/pages/country.ejs
@@ -18,9 +18,9 @@
 			<div class="nav-center">
 				<h1>ACTIVE API</h1>
 				<div>
-					<a href="index.html">Instructions</a>
-					<a href="country.html">Country</a>
-					<a href="weather.html">Weather</a>
+					<a href="/index">Instructions</a>
+					<a href="/country">Country</a>
+					<a href="/weather">Weather</a>
 				</div>
 			</div>
 		</nav>
