--- a/public/styles/css/country.css
+++ b/public/styles/css/country.css
@@ -89,8 +89,7 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -437,8 +436,7 @@ body {
 
 #countryInfo {
   font-size: 5vh;
-  -moz-column-gap: 10%;
-       column-gap: 10%;
+  column-gap: 10%;
   padding: 5vh;
   height: 90%;
   display: grid;
@@ -521,4 +519,9 @@ button {
 #submitButton {
   background-color: #3C434E;
   color: white;
+}
+
+.imageIcon {
+  height: 25vh;
+  width: 15vw;
 }/*# sourceMappingURL=country.css.map */
