--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -87,8 +87,7 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -421,6 +420,16 @@ body {
   padding: 2vh;
 }
 
+#big {
+  color: #3B3B3B;
+  font-weight: 700;
+}
+
+#semi {
+  font-weight: 600;
+  color: #515151;
+}
+
 #container {
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -439,4 +448,41 @@ body {
 
 #container h3 {
   font-size: 3vh;
+}
+
+#button {
+  padding: 1.5vh 4vh 1.5vh 4vh;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 3vh;
+  color: white;
+  background-color: #3C434E;
+  text-decoration: none;
+}
+
+input,
+button {
+  margin: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+
+a {
+  color: white;
+}
+
+/* Unvisited link  */
+a:visited {
+  color: white;
+}
+
+/* Visited link    */
+a:hover {
+  color: white;
+}
+
+/* Mouse over link */
+a:active {
+  color: white;
 }/*# sourceMappingURL=index.css.map */
