Linked it! WEATHER API will break when given invalid input

--- a/views/pages/weather.ejs
+++ b/views/pages/weather.ejs
@@ -22,7 +22,7 @@
 		<div class="nav-center">
 			<h1>ACTIVE API</h1>
 			<div>
-				<a href="/index">Instructions</a>
+				<a href="/">Instructions</a>
 				<a href="/country">Country</a>
 				<a href="/weather">Weather</a>
 			</div>
