--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,9 +25,9 @@
         <div id="inner">
             <h1 id="big">Instructions</h1>
             <h3 id="semi">## City Weather</h3>
-            <p>Enter the exact name of a city to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW,
+            <p>Enter the exact name of a city (City,State) to find the following: Humidity, Climate, Temperature, Wind, Rain, HI/LOW,
                 UV, Date <br> Link: <a href="https://www.weatherapi.com/">https://www.weatherapi.com/</a></p>
-            <button type="button" id="button" href="/weather"><a href="weather.html">Weather</a></button>
+            <button type="button" id="button"><a href="/weather">Weather</a></button>
             <h3 id="semi">## Country Data</h3>
             <p>Enter the exact name of a country to find the following: Language, GDP, Region, Currency, Population,
                 Flag, Coat of Arms <br> Link: <a
@@ -37,4 +37,4 @@
     </div>
 </body>
 
-</html>
+</html> 
