--- a/views/pages/weather.ejs
+++ b/views/pages/weather.ejs
@@ -42,7 +42,7 @@
 				<div id="one">
 					<div class="top">
 					<div id="climateImage">
-						<img class="imageIcon" src="https://cdn.weatherapi.com/weather/64x64/day/176.png" />
+						<img class="imageIcon" src=https:<%=weather.current.condition.icon%> />
 					</div>
 					<div id="temperature" class="temp">
 						<%=weather.current.temp_f%> F
