--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -428,6 +428,7 @@ body {
 #semi {
   font-weight: 600;
   color: #515151;
+  margin-bottom: 0.5vh;
 }
 
 #container {
@@ -489,4 +490,10 @@ a:active {
 
 p {
   font-weight: 600;
+  margin-top: 1vh;
+}
+
+.mini {
+  font-size: 1.5vh;
+  color: #515151;
 }/*# sourceMappingURL=index.css.map */
