--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -14,6 +14,7 @@ body{
 #semi{
     font-weight: 600;
     color: #515151;
+    margin-bottom: .5vh;
 }
 #container {
     color: white;
@@ -71,4 +72,9 @@ a:active {
 }
 p{
     font-weight: 600;
+    margin-top: 1vh;
+}
+.mini{
+    font-size: 1.5vh;
+        color: #515151;
 }
