--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -87,7 +87,8 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -443,7 +444,7 @@ body {
 }
 
 #container p {
-  font-size: 2.5vh;
+  font-size: 1.5vh;
   color: black;
 }
 
